--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-#matplotlib==2.0.2
-#numpy==1.13.1
-#pandas==0.20.3
+matplotlib==2.0.2
+numpy==1.13.1
+pandas==0.20.3
 ipywidgets
 jupyter_contrib_nbextensions
 jupyter_dashboards
